shaddow på boxar/ändrat färgcontrast. och fixat hamburgemeny till höger sida

--- a/newgen/AboutUs.css
+++ b/newgen/AboutUs.css
@@ -178,14 +178,17 @@ body{
 }
 
 @media (max-width: 750px) {
-    .navbar { 
+     .navbar { /* vanlig navbar styling */
         position: relative;
         justify-content: space-between;
         padding: 0.5rem;
+        display:flex; 
     }
 
-    .nav-toggle-label { 
+    .nav-toggle-label { /* visa hamburger icon på mindre skärm */
         display: block;
+        order: 2; 
+        margin-left:auto;
     }
 
     .hamburg {
@@ -265,6 +268,7 @@ body{
     text-align: center;
     color: rgba(0,0,0,0.85);
     background-color: rgba(194, 248, 206, 0.61);
+    box-shadow: 11px 11px 11px 11px rgb(0, 0, 0);
 }
 
 .footer h2{
@@ -283,13 +287,13 @@ body{
 
 .footer .reminder h3{
     margin: 0.5rem 0 0.25rem 0;
-    color: var(--neon-green--);
+    color: var (--font-black--);
 }
 
 .footer .ablaze{
     margin: 0.25rem 0 0 0;
     font-size: 1.3rem;
-    color: #ffd54f; /* yellow glow */
+    color: #ff4f4f; /* röd glow */
     text-transform: uppercase;
     letter-spacing: 1px;
     animation: pulseGlow 2s infinite ease-in-out;
