--- a/newgen/ContactUs.css
+++ b/newgen/ContactUs.css
@@ -186,14 +186,17 @@ body{
 }
 
 @media (max-width: 750px) {
-    .navbar { 
+  .navbar { /* vanlig navbar styling */
         position: relative;
         justify-content: space-between;
         padding: 0.5rem;
+        display:flex; 
     }
 
-    .nav-toggle-label { 
+    .nav-toggle-label { /* visa hamburger icon på mindre skärm */
         display: block;
+        order: 2; 
+        margin-left:auto;
     }
 
     .hamburg {
@@ -249,7 +252,7 @@ body{
     color: var(--font-black--);
     box-shadow: 0 6px 18px rgba(0,0,0,0.06);
     text-align: center;
-    box-shadow: 0 9px 9px rgb(0, 0, 0);
+    box-shadow: 11px 11px 11px 11px rgb(0, 0, 0);
 }
 
 .contact-info h1 {
@@ -330,6 +333,7 @@ body{
     text-align: center;
     color: var(--font-black--);
     margin-top: auto; 
+    box-shadow: 11px 11px 11px 11px rgb(0, 0, 0);
 }
 
 .footer h2{
@@ -348,13 +352,13 @@ body{
 
 .footer .reminder h3{
     margin: 0.5rem 0 0.25rem 0;
-    color: var(--neon-green--);
+    color: var (--font-black--);
 }
 
 .footer .ablaze{
     margin: 0.25rem 0 0 0;
     font-size: 1.3rem;
-    color: #ffd54f; /* yellow glow */
+    color: #ff4f4f; /* röd glow */
     text-transform: uppercase;
     letter-spacing: 1px;
     animation: pulseGlow 2s infinite ease-in-out;
